# Inno_University_AI_Course

./: Logistic regression  README.md
A_B_testing/: hypotesis.md  mlflow_iris1.py  mlflow_ollama1.py
ML_requirements/: requirements.md
airflow-pipelines1/: docker-compose.yml
attestation1/: attestation1.md  аттестация1.docx
attestation2_python/: Task.py  df.csv  head.txt  main.py  readme.md
batch/: auto_report.html  quality_analysis.py  quality_summary.csv  readme.md
certification3/: Dockerfile.app  docker-compose.yml  feature_significance_test.py  loader.py  main.py  model_evaluation_plots.py  preparator.py  requirements.txt  test_api.py  test_hypotheses.py  training_model.py  transformer.py  util.py  Отчет.docx
classification/: report.md  task.py
clusterization/: recommendations.md  task.py  Графики.docx
db/: Task.py  task.ipynb
decision tree/: Decision_tree_and_SVM.ipynb
decorator/: Task1.py  Task2.py
docker/: Dockerfile  main.py  pyproject.toml
docker-compose/: docker-compose.yml
functional/: Task.py
git/: Task.md
iterators and generators/: Task1.py  Task2.py
k8s/: Dockerfile  app.py  deployment.yaml  hpa.yaml  pyproject.toml  report.md  requirements.txt
kafka/: consumer_demo.py  consumer_demo_ml.py  metrics_snapshot.json  producer_demo.py  readme.md  user_sessions.csv
lesson2_algebra_examples/: numpy_add_mult.py  numpy_trans_inverse.py  numpy_vectors.py  pytorch_add_mult.py  pytorch_trans_inverse.py  pytorch_vectors.py  Задание со звездочкой.txt
linear_regression/: report.md  task.py  Графики.docx
logic_data_layers/: Task.py  (+1 more)
(+49 files in other folders)
